--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ping-coming-soon-page-master",
+  "name": "ping-coming-soon",
   "version": "1.0.0",
-  "description": "![Design preview for the Ping coming soon page coding challenge](./design/desktop-preview.jpg)",
-  "main": "app.js",
+  "description": "ping-coming-soon",
+  "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html --dist-dir ./dist"
